After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710533 - [regression] GtkBuilder can no longer construct GtkEntryCompletions properly.
[regression] GtkBuilder can no longer construct GtkEntryCompletions properly.
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkBuilder
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: GtkBuilder maintainers
GtkBuilder maintainers
: 712639 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-10-20 03:00 UTC by Robert Bruce Park
Modified: 2013-11-20 17:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
expected behaviour without gtkbuilder (1.34 KB, text/x-python)
2013-10-20 03:00 UTC, Robert Bruce Park
  Details
demonstration of bug (1.72 KB, text/x-python)
2013-10-20 03:01 UTC, Robert Bruce Park
  Details
GtkEntryCompletion: call setter for "text-column" (1.14 KB, patch)
2013-10-31 06:47 UTC, Lars Karlitski
accepted-commit_now Details | Review

Description Robert Bruce Park 2013-10-20 03:00:56 UTC
Created attachment 257735 [details]
expected behaviour without gtkbuilder

Back in 2012 I wrote an app that used GtkBuilder extensively, and it featured a GtkEntry and associated GtkEntryCompletion, which all worked well at the time.

Unfortunately I can't pin down the exact moment this bug was introduced, but I've recently discovered that the GtkEntryCompletion does not function correctly on either Ubuntu Raring or Ubuntu Saucy. 

The expected behaviour is that the GtkEntryCompletion drops down a list of possible completions for the text entered in the GtEntry, but the observed behavior is that GtkEntryCompletion pops up a 1px tall box that is only visible due to it's drop shadow, and does not display any useful information. 

The GtkListStore in use is correctly populated by my code (so I've ruled out the possibility that the GtkEntryCompletion is correctly displaying an empty model), and the GtkEntryCompletion functions as expected when it is constructed in code. The bug is only present when GtkEntryCompletion has been constructed with GtkBuilder.

Attached are two example scripts, one demonstrating the expected behavior (without using GtkBuilder), and one reproducing the bug with GtkBuilder. Note that there is no (usable) completion drop down with the gtkbuilder version.
Comment 1 Robert Bruce Park 2013-10-20 03:01:32 UTC
Created attachment 257736 [details]
demonstration of bug
Comment 2 Lars Karlitski 2013-10-31 06:47:32 UTC
Created attachment 258632 [details] [review]
GtkEntryCompletion: call setter for "text-column"

Call gtk_entry_completion_set_text_column() when setting the
"text-column" property directly.

The completion appeared empty when setting "text-column" directly (for
example from a GtkBuilder file), because the setter creates and adds the
GtkCellRendererText.
Comment 3 Matthias Clasen 2013-11-01 13:16:35 UTC
Review of attachment 258632 [details] [review]:

ok
Comment 4 Lars Karlitski 2013-11-01 15:42:15 UTC
Committed as 9761a966.
Comment 5 David Shea 2013-11-20 17:54:05 UTC
*** Bug 712639 has been marked as a duplicate of this bug. ***